<resources>
    <string name="app_name">Daily Push</string>
    <string name="translate_to_ru">На русский</string>
    <string name="translate_to_en">На английский</string>
    <string name="translate_to_ru_description">\t\tЗа каждое правильно переведенное слово получайте по +3 очка к Вашему рейтингу, в ином случае - теряйте по 8 очков.</string>
    <string name="translate_to_en_description">\t\tЗа каждое правильно переведенное слово получайте по +4 очка к Вашему рейтингу, в ином случае - теряйте по 9 очков.</string>
    <string name="quit_from_contest">Завершить</string>
    <string name="wrong_answers">Неправильные ответы</string>
    <string name="no_ticket">У вас нет билата</string>
    <string name="tickets_shop">Магазин билетов</string>
    <string name="cannot_purchase">Недостаточно средств</string>
    <string name="free_ticket">Бесплатный билет</string>
    <string name="cannot_get_free_ticket">Проверьте подлючение к итернету!</string>
    <string name="scroll_hint">прокрутите в сторону для доп инфо</string>
    <string name="_60percent">60 процетов</string>
    <string name="_40percent">40 процентов</string>
    <string name="Blessing">Благословение</string>
    <string name="none_blessing_title">Без благословения</string>
    <string name="score_blessing_title">Благословение риска</string>
    <string name="coins_blessing_title">Благословение Мидаса</string>
    <string name="contest_blessing_title">Благословение вечности</string>
    <string name="luck_blessing_title">Благословение удачи</string>
    <string name="mystery_blessing_title">Благословение тайны</string>
    <string name="none_blessing_description">Пусть все будет страндартно</string>
    <string name="score_blessing_description">Вы получаете в 2 раза больше рейтинга, но теряете в 3 раза больше</string>
    <string name="score_blessing_unlocking">Открывается за достижение 666 рейтинга</string>
    <string name="coins_blessing_description">25% шанс на дополнительную монету за правильный ответ, но теряете по 1 монете за неправильный</string>
    <string name="coins_blessing_unlocking">Открывается за накопление 500 монет</string>
    <string name="contest_blessing_description">Игра может продолжаться бесконечно, пока Вы отвечаете правильно. При неверном ответе игра закончится.</string>
    <string name="contest_blessing_unlocking">Открывается за 35 правильных ответов подряд в одной игре</string>
    <string name="luck_blessing_description">10% шанс получить 60%-модификатор, но нельзя купить 40% или 60% модификацию</string>
    <string name="luck_blessing_unlocking">Открывается за добавление 50 собственных слов в приложение</string>
    <string name="mystery_blessing_description">Каждый раз переводите на случайный язык</string>
    <string name="mystery_blessing_unlocking">Отривается при хранении 50 билетов</string>
    <string name="blessings">Благословения</string>
    <string name="score_blessing_unlocked">Благословение риска было открыто!</string>
    <string name="coins_blessing_unlocked">Благословение Мидаса было открыто!</string>
    <string name="contest_blessing_unlocked">Благословение вечности было открыто!</string>
    <string name="luck_blessing_unlocked">Благословение удачи было открыто!</string>
    <string name="mystery_blessing_unlocked">Благословение тайны было открыто!</string>
    <string name="swap_theme">Изменить тему</string>
    <string name="word_to_addition">Слово для добавления</string>
    <string name="en_word">Слово на английском</string>
    <string name="ru_word">Слово на русском</string>
    <string name="add_word">Добавить слово</string>
    <string name="word_is_already_exists">Слово уже существует</string>
    <string name="add_words">Добавить слова</string>
    <string name="addition_word_info">При добавлении каждого нового слова получайте по 3 монеты. При удалении всех слов потеряйте по 4 монеты за каждое слово.</string>
    <string name="addition_toolbar_title">Добавление слов</string>
    <string name="remove_all_words">Удалить все слова</string>
    <string name="have_no_coins">У вас недостаточно монет. Нужно:</string>
    <string name="word_was_removed">Слова удалены</string>
    <string name="cannot_connect_to_internet">Для работы приложения необходим интернет, проверьте соединение с сетью. При появлении интернета, приложение обновится автоматически.</string>
</resources>